[gd_scene load_steps=3 format=3 uid="uid://u1yl8rbswhtp"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://Resources/Theme/wc3_theme.tres" id="1_hsqnm"]
[ext_resource type="Script" path="res://Scenes/HUD/TutorialMenu.gd" id="2_a3117"]

[node name="TutorialMenu" type="PanelContainer" node_paths=PackedStringArray("_text_label", "_back_button", "_next_button")]
custom_minimum_size = Vector2(600, 500)
theme = ExtResource("1_hsqnm")
theme_type_variation = &"MainPanelContainer"
script = ExtResource("2_a3117")
_text_label = NodePath("MarginContainer/VBoxContainer/TextLabel")
_back_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/BackButton")
_next_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/NextButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Close"

[node name="Spacer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Back"

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Next"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
